This resolves the following Bitbucket issues: #1: Demo canvas distortion #2: Line breaks in author's notes #3: The "escape" key to close out a viz pop-up #4: Track and warn about unsaved code changes

--- a/cubetube/static/css/base.css
+++ b/cubetube/static/css/base.css
@@ -365,6 +365,7 @@ button {
     position: relative;
     text-align: center; }
     .viz-wrapper .viz-demo canvas {
+      width: 310px;
       height: 310px; }
     .viz-wrapper .viz-demo .background-image {
       position: absolute;
